# Atomsyn

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite-plugin-data-api.d.ts  vite-plugin-data-api.js  vite-plugin-data-api.ts  vite.config.js  vite.config.ts
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: llm.config.json
data/: SEED_VERSION.json
data/frameworks/: cognitive-psychology-basics.json  design-thinking-5.json  product-innovation-24.json  ui-ux-patterns.json
data/growth/: usage-log.jsonl
data/index/: knowledge-index.json
data/taxonomy/: seed.json
docs/: PRD-v1.5-delta.md  PRD-v2.0.md  PRD.md  ideas.md
docs/competitive/: competitive-analysis-v2.md
docs/framing/: v1.5-problem-framing.md  (+2 more)
openspec/: README.md
scripts/: atomsyn-cli.mjs  migrate-add-role.mjs  migrate-backfill-links.mjs  migrate-v1-to-v1.5.mjs  migrate-v1.5-experiences.mjs  rebuild-index.mjs  scan-skills.mjs
skills/: copilot.system.md  ingest-atom.skill.md  ingest-practice.skill.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: _gen-icon.py  _icon-renderer.html  icon.icns
src-tauri/src/: lib.rs  main.rs
(+519 files in other folders)
