[package]
name = "atomsyn"
version = "0.1.5"
description = "Atomsyn — Personal Meta-Skill Vault"
authors = ["circlelee"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "atomsyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
